refactor(mybatis,oss): 使用Java 16的toList()替代Collectors.toList()